--- a/helloWorld.ipynb
+++ b/helloWorld.ipynb
@@ -14,7 +14,8 @@
     }
    ],
    "source": [
-    "print('Hello World')"
+    "print('Hello World')\n",
+    "https://prod.liveshare.vsengsaas.visualstudio.com/join?28BEE235FAEC8B4B018E9DCE9FDCAA267920"
    ]
   }
  ],
