--- a/Exercise2/ML1_Exercise2.3_Group3.ipynb
+++ b/Exercise2/ML1_Exercise2.3_Group3.ipynb
@@ -106,9 +106,9 @@
     "\n",
     "We compute for parameters $ \\mu^{*} $ and $ (\\sigma^{2}) $ for the 100 previously generated datapoints.\n",
     "\n",
-    "$ \\mu = \\frac{1}{N}\\sum_{i-1}^{N} (x_i).  $\n",
+    "$ \\mu = \\frac{1}{N}\\sum_{i=1}^{N} (x_i).  $\n",
     "\n",
-    "$ \\sigma^{2} = \\frac{1}{N}\\sum_{i-1}^{N} (x_i - \\mu)^{2}.  $"
+    "$ \\sigma^{2} = \\frac{1}{N}\\sum_{i=1}^{N} (x_i - \\mu)^{2}.  $"
    ]
   },
   {
