--- a/Exercise3/Exercise3_1.ipynb
+++ b/Exercise3/Exercise3_1.ipynb
@@ -281,7 +281,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.13 ('base')",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -295,12 +295,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.8 (tags/v3.10.8:aaaf517, Oct 11 2022, 16:50:30) [MSC v.1933 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "744330a1bd1da4938e3ee6ced885f86ba9e3867e12b6bf3c725cfc3e4b111804"
+    "hash": "39593f09d67ee4557d3b2cf1cd019c0540aa3f6dff991e302a6c2ec07d7aea32"
    }
   }
  },
